horizontal scroll in Firefox for normal width fixed

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -68,7 +68,7 @@ body {
 	.table-grid {
 		overflow: hidden;
 		//min-width: @grid-width;
-		//table-layout: fixed;
+		table-layout: fixed;
 		max-width: none;
 	//	min-width: 100%;
 		min-width: @grid-width;
@@ -338,10 +338,11 @@ body {
 				td {
 					padding: 0 !important;
 					height: 0;
-					border-width: 0;
+					border: 0;
 
 					div {
 						height: 0;
+						//background: red;
 					}
 				}
 			}
@@ -410,6 +411,8 @@ body {
 							max-width: 170px;
 						}
 					}
+
+
 
 
 
@@ -782,6 +785,6 @@ body {
 
 
 .w {
-	width: 200px;
+	//width: 500px;
 }
 
